# plaque3mf

./: .devcontainer.json  .gitignore  ARCHITECTURE.md  Cargo.toml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/document/: Cargo.toml
crates/document/src/: lib.rs  pdfium.rs  rgba.rs  sizing.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/export-3mf/: Cargo.toml
crates/export-3mf/src/: lib.rs  model.rs  package.rs  tests.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/job-spec/: Cargo.toml
crates/job-spec/src/: lib.rs
crates/mesh25d/: Cargo.toml
crates/mesh25d/src/: build.rs  lib.rs  tests.rs  triangulate.rs  types.rs
crates/planar/: Cargo.toml
crates/planar/src/: cleanup.rs  lib.rs  tests.rs  topology.rs  types.rs
