[package]
name = "plaque3mf-export-3mf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
plaque3mf-mesh25d.workspace = true

[dev-dependencies]
plaque3mf-document.workspace = true
plaque3mf-planar.workspace = true

[lints]
workspace = true
